--- a/02_format_css/css/main.css
+++ b/02_format_css/css/main.css
@@ -58,6 +58,8 @@ p {
     text-shadow: 1px 1px 2px green;
 
     /* font-family:Arial, Helvetica, sans-serif; */
+    width:200px;
+    height: 100px;
 }
 span{
     vertical-align: super;
