--- a/06_menu/css/main.css
+++ b/06_menu/css/main.css
@@ -25,3 +25,7 @@ a{
 .menu-2 a{
     background: linear-gradient(180deg,rgba(130, 186, 243, 1) 0%, rgba(56, 113, 180, 1) 54%);
 }
+i{
+    color:red;
+    /* font-size: 45px; */
+}
